--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -83,6 +83,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
+    font-family: $headers-font-family;
 }
 
 
@@ -130,6 +131,7 @@ blockquote {
 pre,
 code {
     font-size: 15px;
+    font-family: $code-font-family;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
