--- a/css/main.scss
+++ b/css/main.scss
@@ -6,9 +6,11 @@
 
 
 // Our variables
-$base-font-family: 'Tangerine', serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
+$base-font-family: 'Source Sans Pro', sans-serif;
+$headers-font-family: 'Source Serif Pro', serif;
+$code-font-family: 'Source Code Pro', monospace;
+$base-font-size:   20px;
+$base-font-weight: 200;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
