Apply default layout to index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,8 @@
         <!-- /.container-fluid -->
     </nav>
 
+    {{ content }}
+
     <!-- jQuery -->
     <script src="/js/jquery.js"></script>
 
