Set title as page title or default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>
+        {% if page.title %}
+            {{ page.title }}
+        {% else %}
+            sgdjs.net
+        {% endif %}
+    </title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
