--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,12 +14,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    {% if page.url == '/about %}
+                    {% if page.url == '/about.html' %}
                       <li class="active">
                     {% else %}
                       <li>
                     {% endif %}
-                        <a href="/about.html">About</a>
+                    <a href="/about.html">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
